# xmonad-config

./: .gitignore  XMonadConfig.cabal  my-xmonad.cabal  package.yaml  stack.yaml  xmonad.hs
lib/MyConfig/: Applications.hs  GeneralConfig.hs  Hooks.hs  Keybindings.hs  StatusBar.hs
lib/MyConfig/Hooks/: LayoutHook.hs  ManageHook.hs  StartupHook.hs
src/: xmonad.hs
