name: my-xmonad
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

library my-config
  hs-source-dirs: lib
  build-depends: base
               , xmonad >= 0.13
               , xmonad-contrib >= 0.13
	           , xmonad-extras >= 0.13
  exposed-modules: MyConfig.Keybindings
                 , MyConfig.Applications
                 , MyConfig.GeneralConfig
                 , MyConfig.Hooks.LayoutHook
                 , MyConfig.Hooks.ManageHook
                 , MyConfig.Hooks.StartupHook
                 , MyConfig.StatusBar


executable my-xmonad
  main-is: xmonad.hs
  hs-source-dirs: .
  build-depends:  base
        , my-config
        ,  xmonad >= 0.13
	    ,  xmonad-contrib >= 0.13
	    ,  xmonad-extras >= 0.13
	    ,  X11 >= 1.0
	    ,  X11-xft >= 0.3
	    ,  containers
  default-language: Haskell2010
  ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded -O2
